[project]
name = "gentestsai-lib"
version = "1.0.0"
requires-python = ">=3.10"
dependencies = [
	"c23_logger",
    "llm_access",
    "docker~=7.1.0",
    "regex~=2024.11.6"
]
license = "LicenseRef-Custom-SA"
license-files = ["LICENSE"]

authors = [
    { name = "Filippo Mecozzi (codesavant23)", email = "codesavant23@proton.me" }
]

maintainers = [
    { name = "Filippo Mecozzi (codesavant23)" }
]
